Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -10291,7 +10291,7 @@ Error message and password prompt
 <div created="20201112221014456" creator="user" modified="20210201140620564" modifier="user" title="$:/GitHub/Repo">
 <pre>frontenddevweb/frontenddevweb.github.io</pre>
 </div>
-<div created="20201112220827768" creator="user" modified="20210201140615657" modifier="user" title="$:/GitHub/Username">
+<div created="20201112220827768" creator="user" modified="20210201140736075" modifier="user" title="$:/GitHub/Username">
 <pre>frontenddevweb</pre>
 </div>
 <div status="complete" title="$:/Import">
@@ -10715,10 +10715,10 @@ Error message and password prompt
 <div color="#25ff06" created="20201112223833845" icon="$:/core/images/done-button" modified="20210126235832614" tags="tags" title="done">
 <pre>&lt;$transclude tiddler=&quot;LTg&quot;/&gt;</pre>
 </div>
-<div created="20201112222311414" creator="user" modified="20210201135033492" modifier="user" title="Index">
+<div created="20201112222311414" creator="user" modified="20210201140717979" modifier="user" title="Index">
 <pre>^^{{stats}}^^
 
-Bienvenue sur [[user.github.io|https://user.github.io/]]! Ce wiki vas me servir à compiler des connaissances lors de mon apprentissage du dévellopement frontend. J'espère qu'il vous sera utile. 
+Bienvenue sur [[frontenddevweb.github.io|https://frontenddevweb.github.io]]! Ce wiki vas me servir à compiler des connaissances lors de mon apprentissage du dévellopement frontend. J'espère qu'il vous sera utile. 
 
 &lt;p class=&quot;separationaccueil&quot;&gt;Dernières màj&lt;/p&gt;
 {{Latest changes}}
