--- a/index.html
+++ b/index.html
@@ -267,6 +267,8 @@ Error message and password prompt
 
 <li>done</li>
 
+<li>FAQ</li>
+
 <li>Index</li>
 
 <li>Kanban</li>
@@ -276,8 +278,6 @@ Error message and password prompt
 <li>LTg</li>
 
 <li>LTg#</li>
-
-<li>Q&amp;A</li>
 
 <li>Random tiddler by tag</li>
 
@@ -10291,13 +10291,13 @@ Error message and password prompt
 <div created="20201112221014456" creator="user" modified="20210201140620564" modifier="user" title="$:/GitHub/Repo">
 <pre>frontenddevweb/frontenddevweb.github.io</pre>
 </div>
-<div created="20201112220827768" creator="user" modified="20210201140736075" modifier="user" title="$:/GitHub/Username">
+<div created="20201112220827768" creator="user" modified="20210201143554927" modifier="user" title="$:/GitHub/Username">
 <pre>frontenddevweb</pre>
 </div>
 <div status="complete" title="$:/Import">
 <pre>The following tiddlers were imported:
 
-# [[$:/plugins/tiddlywiki/highlight]]</pre>
+# [[FAQ]]</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
@@ -10576,7 +10576,7 @@ Error message and password prompt
 <div created="20210115195113476" modified="20210116192140361" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20210115195813582" creator="user" modified="20210201134339776" modifier="user" title="$:/state/tab/sidebar--595412856">
+<div created="20210115195813582" creator="user" modified="20210201143245554" modifier="user" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20210127000723467" modified="20210127000902974" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -10588,7 +10588,7 @@ Error message and password prompt
 <div created="20210201132301785" creator="u" modified="20210201132302326" modifier="use" title="$:/status/UserName">
 <pre>user</pre>
 </div>
-<div created="20210201140535815" creator="user" list="$:/ControlPanel Index" modified="20210201140535815" modifier="user" title="$:/StoryList">
+<div created="20210201143550981" creator="user" list="$:/ControlPanel Index" modified="20210201143550981" modifier="user" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
@@ -10715,11 +10715,23 @@ Error message and password prompt
 <div color="#25ff06" created="20201112223833845" icon="$:/core/images/done-button" modified="20210126235832614" tags="tags" title="done">
 <pre>&lt;$transclude tiddler=&quot;LTg&quot;/&gt;</pre>
 </div>
-<div created="20201112222311414" creator="user" modified="20210201140717979" modifier="user" title="Index">
+<div created="20210126233747211" creator="user" modified="20210201142900710" modifier="user" tags="aide" title="FAQ">
+<pre>;J'ai téléchargé ce wiki, comment puis-je supprimer les entrées pour n'ajouter que les miennes ?
+:Dans la recherche avancée : [tag [nom du tag]], puis choisissez &quot;supprimer&quot; pour effacer tous les tiddlers avec ce tag.
+
+;Comment sauvegarder mes modifications ?
+:Je recommande d'utiliser [[Timimi|https://ibnishak.github.io/Timimi/#What%20is%20timimi]]. Vous pouvez trouver d'autres solutions [[ici|https://tiddlywiki.com/#Saving]].
+
+;Comment modifier le nom du fichier wiki lors de l'enregistrement ?
+:Vous pouvez le modifier [[ici|$:/config/SaveWikiButton/Filename]].</pre>
+</div>
+<div created="20201112222311414" creator="user" modified="20210201143453662" modifier="user" title="Index">
 <pre>^^{{stats}}^^
 
 Bienvenue sur [[frontenddevweb.github.io|https://frontenddevweb.github.io]]! Ce wiki vas me servir à compiler des connaissances lors de mon apprentissage du dévellopement frontend. J'espère qu'il vous sera utile. 
 
+
+Pour du back end, consultez [[backenddevweb.github.io|https://backenddevweb.github.io]].
 &lt;p class=&quot;separationaccueil&quot;&gt;Dernières màj&lt;/p&gt;
 {{Latest changes}}
 
@@ -10743,7 +10755,7 @@ Ce wiki est propulsé par &lt;a href=&quot;https://tiddlywiki.com/&quot; target=
 
 --&gt;
 
-&lt;a role=&quot;info&quot; href=&quot;mailto:user@gmail.com&quot; class=&quot;contact&quot;&gt;&lt;span class=&quot;wave&quot;&gt;&amp;#128075;&lt;/span&gt;user@gmail.com&lt;/a&gt;  </pre>
+&lt;a role=&quot;info&quot; href=&quot;mailto:frontenddevweb@gmail.com&quot; class=&quot;contact&quot;&gt;&lt;span class=&quot;wave&quot;&gt;&amp;#128075;&lt;/span&gt;frontenddevweb@gmail.com&lt;/a&gt;  </pre>
 </div>
 <div created="20201112223028343" modified="20201112224024469" title="Kanban">
 <pre>&lt;div class=&quot;container&quot;&gt;
@@ -10782,16 +10794,6 @@ subfilter=&quot;!has[draft.of]![Home]![Latest changes]!tag[TW5]!tag[todo]!tag[do
 <pre>&lt;ul&gt;
 &lt;$list filter=&quot;[all[current]tagging[]sort[title]]&quot;&gt;
 &lt;$link&gt;&lt;li&gt;&lt;span&gt;&lt;$view field=&quot;title&quot;/&gt; (&lt;$count filter=&quot;[all[current]tagging[]]&quot;/&gt;)&lt;/span&gt;&lt;/li&gt;</pre>
-</div>
-<div created="20210126233747211" creator="user" modified="20210201133214932" modifier="user" tags="help" title="Q&amp;A">
-<pre>;I downloaded this wiki, how do I delete the curated entries to only add my own ?
-:In the advanced search: [tag[nameofthetag]], then choose &quot;delete&quot; to delete all the tiddlers with this tag.
-
-;How do I save my modifications ?
-:I recommend to use [[Timimi|https://ibnishak.github.io/Timimi/#What%20is%20timimi]]. You can find other solutions [[here|https://tiddlywiki.com/#Saving]].
-
-;How do I modify the name of the wiki file when saved ?
-:You can modify it [[here|$:/config/SaveWikiButton/Filename]].</pre>
 </div>
 <div created="20210114233030232" creator="user" modified="20210201132629067" modifier="user" tags="TW5" title="Random tiddler by tag">
 <pre>&lt;$setvars _r=&quot;[tag[TW5]random[]]&quot; random=&quot;\{{{\ [r] \}}}\&quot;&gt;
