Enregistré depuis TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -383,6 +383,10 @@ Error message and password prompt
 
 <li>$:/state/tabs/controlpanel/toolbars-1345989671</li>
 
+<li>$:/state/tag-manager/doing</li>
+
+<li>$:/state/tag-manager/done</li>
+
 <li>$:/state/tag-manager/tags</li>
 
 <li>$:/state/tag-manager/todo</li>
@@ -576,6 +580,8 @@ Error message and password prompt
 <li>done</li>
 
 <li>Done_Icon</li>
+
+<li>Draft of 'Angular Universal : rendu côté serveur' by user</li>
 
 <li>ECMAScript</li>
 
@@ -862,6 +868,8 @@ Error message and password prompt
 <li>Template task-control</li>
 
 <li>Test style tag aliases source</li>
+
+<li>test tak</li>
 
 <li>TgNT</li>
 
@@ -10978,7 +10986,7 @@ Mohammad Rahmani: https://github.com/kookma
 <div created="20201112221014456" creator="user" modified="20210201140620564" modifier="user" title="$:/GitHub/Repo">
 <pre>frontenddevweb/frontenddevweb.github.io</pre>
 </div>
-<div created="20201112220827768" creator="user" modified="20210527000759511" modifier="user" title="$:/GitHub/Username">
+<div created="20201112220827768" creator="user" modified="20210527003835994" modifier="user" title="$:/GitHub/Username">
 <pre>frontenddevweb</pre>
 </div>
 <div status="complete" title="$:/Import">
@@ -17887,8 +17895,8 @@ Selectively refreshes the widget if needed. Returns true if the widget or any of
 <div created="20201112214720665" creator="user" modified="20210522205232103" modifier="user" title="$:/SiteTitle">
 <pre>DevWeb - Front End</pre>
 </div>
-<div created="20210201015607790" creator="user" modified="20210527000714705" modifier="user" title="$:/state/advancedsearch/currentTab">
-<pre>$:/core/ui/AdvancedSearch/System</pre>
+<div created="20210201015607790" creator="user" modified="20210527001149682" modifier="user" title="$:/state/advancedsearch/currentTab">
+<pre>$:/core/ui/AdvancedSearch/Shadows</pre>
 </div>
 <div created="20210520121708812" creator="user" modified="20210520121709812" modifier="user" title="$:/state/edit/references-719921787">
 <pre>hide</pre>
@@ -17926,8 +17934,8 @@ Selectively refreshes the widget if needed. Returns true if the widget or any of
 <div created="20210315154404628" creator="user" modified="20210522213226059" modifier="user" title="$:/state/tab--1418380610">
 <pre>$:/core/ui/ControlPanel/Plugins/Add/Languages</pre>
 </div>
-<div created="20210201015607791" creator="user" modified="20210527000714705" modifier="user" title="$:/state/tab--1498284803">
-<pre>$:/core/ui/AdvancedSearch/System</pre>
+<div created="20210201015607791" creator="user" modified="20210527001149682" modifier="user" title="$:/state/tab--1498284803">
+<pre>$:/core/ui/AdvancedSearch/Shadows</pre>
 </div>
 <div created="20210522232839590" creator="user" modified="20210522232839590" modifier="user" title="$:/state/tab--157650655">
 <pre>$:/core/ui/TiddlerInfo/References</pre>
@@ -17986,14 +17994,20 @@ Selectively refreshes the widget if needed. Returns true if the widget or any of
 <div created="20210523132746016" creator="user" modified="20210523132746016" modifier="user" title="$:/state/tab-943989570">
 <pre>$:/core/ui/TiddlerInfo/References</pre>
 </div>
-<div created="20210115195813582" creator="user" modified="20210527000332492" modifier="user" title="$:/state/tab/sidebar--595412856">
+<div created="20210115195813582" creator="user" modified="20210527001603026" modifier="user" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20210127000723467" creator="user" modified="20210315154335118" modifier="user" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20210526235852486" creator="user" modified="20210526235852486" modifier="user" title="$:/state/tag-manager/tags">
+<div created="20210527001056796" creator="user" modified="20210527001056796" modifier="user" title="$:/state/tag-manager/doing">
 <pre>open</pre>
+</div>
+<div created="20210527001100226" creator="user" modified="20210527001100226" modifier="user" title="$:/state/tag-manager/done">
+<pre>open</pre>
+</div>
+<div created="20210526235852486" creator="user" modified="20210527001052410" modifier="user" title="$:/state/tag-manager/tags">
+<pre>closed</pre>
 </div>
 <div created="20210526231107532" creator="user" modified="20210526231107532" modifier="user" title="$:/state/tag-manager/todo">
 <pre>open</pre>
@@ -18004,7 +18018,7 @@ Selectively refreshes the widget if needed. Returns true if the widget or any of
 <div created="20210201132301785" creator="u" modified="20210201132302326" modifier="use" title="$:/status/UserName">
 <pre>user</pre>
 </div>
-<div created="20210527000751268" creator="user" list="$:/ControlPanel Index" modified="20210527000751268" modifier="user" title="$:/StoryList">
+<div created="20210527003829947" creator="user" list="$:/ControlPanel Index" modified="20210527003829947" modifier="user" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210525130612724" creator="user" list="$:/core/ui/ViewTemplate/title $:/core/ui/ViewTemplate/unfold $:/core/ui/ViewTemplate/subtitle $:/core/ui/ViewTemplate/tags $:/core/ui/ViewTemplate/classic $:/core/ui/ViewTemplate/body" modified="20210525130614322" modifier="user" tags="tags" title="$:/tags/ViewTemplate">
@@ -18182,7 +18196,7 @@ Pour une explications des termes spécifiques à angular, consulter le [[glossai
 
 Voir aussi [[Schematics CLI]].</pre>
 </div>
-<div created="20210523124943836" creator="user" modified="20210527000611885" modifier="user" source="https://angular.io/guide/universal" tags="Angular guide todo" title="Angular Universal : rendu côté serveur">
+<div aliases="test1 test2 test3" created="20210523124943836" creator="user" modified="20210527003541775" modifier="user" source="https://angular.io/guide/universal" tags="Angular guide todo" title="Angular Universal : rendu côté serveur">
 <pre></pre>
 </div>
 <div created="20210520122415903" creator="user" modified="20210522222410330" modifier="user" tags="Angular" title="angular.json">
@@ -18818,17 +18832,42 @@ Pour plus d'informations, voir [[Fonctionnement des directives d'attributs]].</p
 
 Pour plus d'informations, voir [[Directives structurelles|Directives structurelles]].</pre>
 </div>
-<div color="#e8aa0c" created="20201112223829885" creator="user" icon="$:/core/images/close-others-button" modified="20210526155532893" modifier="user" tags="" title="doing">
+<div color="#e8aa0c" created="20201112223829885" creator="user" icon="" modified="20210527001541712" modifier="user" tags="" title="doing">
 <pre>{{||LTg}}</pre>
 </div>
 <div created="20210526230617679" creator="user" modified="20210526230625492" modifier="user" tags="" title="Doing_Icon">
 <pre></pre>
 </div>
-<div color="#25ff06" created="20201112223833845" creator="user" icon="$:/core/images/done-button" modified="20210526155545471" modifier="user" tags="" title="done">
+<div color="#25ff06" created="20201112223833845" creator="user" icon="" modified="20210527001539982" modifier="user" tags="" title="done">
 <pre>{{||LTg}}</pre>
 </div>
 <div created="20210526230629737" creator="user" modified="20210526230634961" modifier="user" tags="" title="Done_Icon">
 <pre></pre>
+</div>
+<div created="20210527002834055" creator="user" modified="20210527002834272" modifier="user" title="Draft of 'Angular Universal : rendu côté serveur' by user">
+<pre>&lt;br&gt;
+a
+&lt;br&gt;
+a
+&lt;br&gt;
+a
+&lt;br&gt;
+a
+&lt;br&gt;
+a
+&lt;br&gt;
+a
+&lt;br&gt;
+a
+&lt;br&gt;
+a
+&lt;br&gt;
+a
+&lt;br&gt;
+a&lt;br&gt;
+a
+&lt;br&gt;
+a</pre>
 </div>
 <div created="20210522232509778" creator="user" modified="20210524161416648" modifier="user" source="https://angular.io/guide/glossary#ecmascript" tags="glossaire Angular" title="ECMAScript">
 <pre>La [[spécification officielle du langage JavaScript|https://fr.wikipedia.org/wiki/ECMAScript]].
@@ -20032,12 +20071,21 @@ opacity:1;
 
 &lt;/pre&gt;</pre>
 </div>
-<div created="20210527000342294" creator="user" modified="20210527000535193" modifier="user" tags="$:/tags/Stylesheet task-control" title="Style task-control" type="text/css">
+<div created="20210527000342294" creator="user" modified="20210527003720798" modifier="user" tags="$:/tags/Stylesheet task-control" title="Style task-control" type="text/css">
 <pre>.task-control {
-position: absolute;
-right: 0;
-bottom: 0;
-padding: 10px;
+  position: absolute;
+  right: 0;
+
+  bottom: 0;
+
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.task-control label {
+  margin: 5px;
 }</pre>
 </div>
 <div created="20210127000920920" creator="Télumire" modified="20210522235908780" modifier="user" tags="TW5 $:/tags/Stylesheet" title="Style tiddler controls" type="text/css">
@@ -20126,22 +20174,23 @@ Positions the controls above the title of the tiddler to prevent premature line 
 <div caption="task-control" created="20210303171128800" list="" modified="20210304002836703" tags="task-control $:/tags/TextEditor/Snippet" title="task-control snippet">
 <pre>&lt;&lt;task-control&gt;&gt;</pre>
 </div>
-<div created="20210525124533318" creator="user" list-after="$:/core/ui/ViewTemplate/title" modified="20210527000319313" modifier="user" tags="TW5 $:/tags/ViewTemplate source task-control" title="Template task-control">
+<div created="20210525124533318" creator="user" list-after="$:/core/ui/ViewTemplate/title" modified="20210527002333617" modifier="user" tags="TW5 $:/tags/ViewTemplate source task-control" title="Template task-control">
 <pre>&lt;$list filter=&quot;[all[current]tag[todo]][all[current]tag[doing]][all[current]tag[done]]&quot;&gt;
-
 &lt;span class=&quot;task-control&quot;&gt;
 &lt;&lt;task-control&gt;&gt;
 &lt;/span&gt;
-
 &lt;/$list&gt;</pre>
 </div>
 <div aliases="test" created="20210526232018072" creator="user" modified="20210526232056208" modifier="user" source="source url" tags="todo test" title="Test style tag aliases source">
 <pre>Contenu tiddler</pre>
 </div>
+<div created="20210527002102580" creator="user" modified="20210527002107475" modifier="user" tags="" title="test tak">
+<pre></pre>
+</div>
 <div created="20210313134122939" modified="20210313135819600" tags="TW5 todo" title="TgNT">
 <pre>&lt;a href=&quot;#:[all[current]tagging[]sort[title]]&quot; target=&quot;_blank&quot;&gt;Open all in a new tab&lt;/a&gt;</pre>
 </div>
-<div color="#ff0000" created="20201112223824226" creator="user" icon="$:/core/images/refresh-button" modified="20210526231245608" modifier="user" tags="" title="todo">
+<div color="#ff0000" created="20201112223824226" creator="user" icon="" modified="20210527001534919" modifier="user" tags="" title="todo">
 <pre>{{||LTg}}</pre>
 </div>
 <div created="20210526230554675" creator="user" modified="20210526231023428" modifier="user" tags="$:/tags/Image" title="Todo_Icon">
